/*
 * $Id: ChangeLog,v 1.1318 2003/08/02 01:21:55 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-08-01 22:48 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    ! Fixed minor compile error
    * Some formating.

2003-08-01 18:21 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/dbcmd.c
    ! Removed redandant #defines.

2003-08-01 19:00 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * thread.c
    ! A misplaced IF upon automatic mutex unlockin/destruction
      could cause GPF at program exit. Fixed.

  * source/rtl/hblog.prg
  * include/hblog.ch
    + Added LOGDEBUG channel.
    ! Program name was not properly initialized. Fixed.

  * tests/logtest.prg
    + added a test for logdebug channel

  + docs/hblog.txt
    + Added complete documentation for log system

2003-08-01 12:30 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
  * source/rdd/dbfntx/dbfntx1.c
    ! Error "Cannot find current key" in ntxGoCold() now raises a run
      time error in the calling method, instead of hang up the application.
      The problem itself is not fixed yet.

2003-08-01 14:19 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rdd/dbcmd.c
    ! Fixed initialization of mutex under windows
    ! Removed an unlock over nonlocked mutex that causes windows hang

  * tests/mtstress.prg
    + Added "shared" to the USE of DBF test; without it, the system
      (obviously) hangs, with threads waiting for each other to release
      the lock on the file.

2003-08-01 13:41 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/hblog.prg
    ! Fixed Missing some parameters from LOG() method declaration in
      class HB_Logger

  * include/thread.h
  * source/rdd/dbcmd.c
  * source/vm/thread.c
    ! threadsafed RDD system (except for sensible error messages
      on imporper operations under MT).